--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "alu-tracker-comments-api",
   "version": "1.0.0",
-  "description": "for user and non user comments on the site",
-  "main": "index.js",
+  "description": "Per-car comments API (guest + logged-in later, pending moderation)",
+  "main": "dist/index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node -r tsconfig-paths/register src/server.ts",
+    "dev": "ts-node -r tsconfig-paths/register src/server.ts",
+    "build": "tsc",
+    "start:watch": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts",
+    "start:dev": "npm run start:watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JHebenstreit48/alu-tracker-comments-api.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JHebenstreit48/alu-tracker-comments-api/issues"
-  },
-  "homepage": "https://github.com/JHebenstreit48/alu-tracker-comments-api#readme",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
